--- a/view/commons/menuStore.html
+++ b/view/commons/menuStore.html
@@ -75,40 +75,40 @@
             <div class="collapse navbar-collapse" id="navcol-2" style="font-size: 13px;font-family: 'Noto Sans KR', sans-serif;">
                 <ul class="navbar-nav" style="font-family: 'Noto Sans KR', sans-serif;font-size: 20px;color: rgb(0,0,0); margin-left: 20px;">
                     <li class="nav-item"><a class="nav-link nav_a" href="../../index.html">홈</a></li>
-                    <li class="nav-item"><a class="nav-link nav_a" href="#">인기상품</a></li>
-                    <li class="nav-item"><a class="nav-link nav_a" href="#">가구</a></li>
-                    <li class="nav-item"><a class="nav-link nav_a" href="#">조명</a></li>
-                    <li class="nav-item"><a class="nav-link nav_a" href="#">홈데코</a></li>
-                    <li class="nav-item"><a class="nav-link nav_a" href="#">패브릭</a></li>
-                    <li class="nav-item"><a class="nav-link nav_a" href="#">수납정리</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a" href="#today_hot">인기상품</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a down_list" href="#">가구</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a down_list" href="#">조명</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a down_list" href="#">홈데코</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a down_list" href="#">패브릭</a></li>
+                    <li class="nav-item"><a class="nav-link nav_a down_list" href="#">수납정리</a></li>
                 </ul>
             
                 <!-- 메뉴 호버 -->
-                <div class="submenu_wrap d-md-block d-none active">
+                <div class="submenu_wrap d-md-block d-none">
                     <div class="submenu_box">
                         <div class="row">
                             <figure class="figure">
-                                <a href="#">
+                                <a href="#" class="down_list">
                                     <img src="../../assets/img/가구.png"><figcaption class="figure-caption"><strong>가구</strong></figcaption>
                                 </a>
                             </figure>
                             <figure class="figure">
-                                <a href="#">
+                                <a href="#" class="down_list">
                                     <img src="../../assets/img/조명.png"><figcaption class="figure-caption"><strong>조명</strong></figcaption>
                                 </a>
                             </figure>
                             <figure class="figure">
-                                <a href="#">
+                                <a href="#" class="down_list">
                                     <img src="../../assets/img/데코.png"><figcaption class="figure-caption"><strong>홈데코</strong></figcaption>
                                 </a>
                             </figure>
                             <figure class="figure">
-                                <a href="#">
+                                <a href="#" class="down_list">
                                     <img src="../../assets/img/패브릭.png"><figcaption class="figure-caption"><strong>패브릭</strong></figcaption>
                                 </a>
                             </figure>
                             <figure class="figure">
-                                <a href="#">
+                                <a href="#" class="down_list">
                                     <img src="../../assets/img/수납.png"><figcaption class="figure-caption"><strong>수납정리</strong></figcaption>
                                 </a>
                             </figure>
