--- a/view/community/event.html
+++ b/view/community/event.html
@@ -29,8 +29,9 @@
      .profile {
         width: 100%;
         height: 180px;
-        object-fit: fill;      
-      } 
+        object-fit: fill;  
+           
+      }
 
     .hoverimg{
         overflow: hidden;
@@ -97,45 +98,9 @@
             <div align='right' style="margin: 2%;" onclick="goEventWrite()">
             <button class="eventBtn">이벤트 등록</button>
             </div>
-
-
-
             <!-- 이벤트 썸네일 div -->
-            <div  class="boxbox">
-                <div class='hoverimg'>
-                    <a href="./eventDetail.html?seq=">                         
-                        <img class="profile" src="../../assets/img/화면 캡처 2021-05-14 162559.jpg">
-                    </a>
-                </div> 
-                <div>
-                    <p style="float: left;" class="eprogress">진행중</p>
-                    <p style="float: right;" class="eventdate">2021/03/02 ~ 2022/03/04</p>
-                </div>                         
-            </div>  
 
-            <div  class="boxbox">
-                <div class='hoverimg'>                
-                    <a href="./eventDetail.html?seq=">                          
-                        <img class="profile" src="../../assets/img/화면 캡처 2021-05-14 162617.jpg">
-                    </a>
-                </div>
-                <div>
-                    <p style="float: left;" class="eprogress">진행중</p>
-                    <p style="float: right;" class="eventdate">2021/03/02 ~ 2022/03/04</p>
-                </div>                                                             
-            </div>    
-
-            <div  class="boxbox">
-                <div class='hoverimg'>
-                    <a href="./eventDetail.html?seq=">      
-                        <img class="profile" src="../../assets/img/화면 캡처 2021-05-14 125202.jpg">
-                    </a>
-                </div>
-                <div>
-                    <p style="float: left;" class="eprogress">진행중</p>
-                    <p style="float: right;" class="eventdate">2021/03/02 ~ 2022/03/04</p>
-                </div>                           
-            </div>                       
+        
         </div>     
         <div class="col-xl-2"></div>
     </div>
@@ -161,20 +126,18 @@
 
     let today2 = year+"/"+month+"/"+date; // 현재 날짜
 
+    
+
     $.ajax({
         url:"http://localhost:3000/getEventList",
         type:"get",
-        success:function(list){
-            //alert(JSON.stringify(list));
-           
+        success:function(list){           
             app = "";
             $.each(list,function(i,val){
                 app += "<div class='boxbox'>"
                     +"<div class='hoverimg'>"                        
-                    +"<a href='./eventDetail.html?eventSeq="+val.eventSeq+"'>"
-                    +"<div class='profile'>"       
-                    +val.eventFilename
-                    +"</div>"
+                    +"<a href='./eventDetail.html?eventSeq="+val.eventSeq+"'>"    
+                    +"<img class='profile' src='http://localhost:3000/upload/"+val.eventFilename+"'>"
                     +"</a>"                   
                     +"</div>"
                     +"<div>"
@@ -183,6 +146,7 @@
                     +"</div>"
                     +"</div>";
             })  
+           
             $(".col-xl-8").append(app);
         },error:function(){
 
@@ -190,10 +154,28 @@
 
     })
 
+    
+    //$(".boxbox .hoverimg p img").addClass("profile");
+    //$(".boxbox .hoverimg img").addClass("profile");
+    $('div .hoverimg').find('img').attr('class','profile');
+
+    //$('.hoverimg').find('img').addClass('profile');
+    //$('.hoverimg').children(' a img ').addClass('profile');
+    //console.log($(".boxbox .hoverimg img").attr('class','profile'));
+ 
+
+
+
+
+
 
 
 
 })
+
+
+
+
 </script>
 
 </html>
